gen/26.1/rpk/rpk-redpanda-admin-brokers-decommission.adoc
= rpk redpanda admin brokers decommission
:description: rpk redpanda admin brokers decommission

Decommission the given broker.

Decommissioning a broker removes it from the cluster.

A decommission request is sent to every broker in the cluster, only the cluster
leader handles the request.

For safety on v22.x clusters, this command will not run if the requested 
broker is in maintenance mode. As of v23.x, Redpanda supports 
decommissioning a node that is currently in maintenance mode. If you are on 
a v22.x cluster and need to bypass the maintenance mode check (perhaps your 
cluster is unreachable), use the --skip-liveness-check flag.

== Usage

[,bash]
----
rpk redpanda admin brokers decommission [BROKER ID] [flags]
----

== Flags

[cols="1m,1a,2a"]
|===
|*Value* |*Type* |*Description*

|-h, --help |- |Help for decommission.

|--skip-liveness-check |- |If enabled, rpk will issue the decommission request without checking if the broker is in maintenance mode.

|--config |string |Redpanda or rpk config file; default search paths are `/var/lib/redpanda/.config/rpk/rpk.yaml`, `$PWD/redpanda.yaml`, and `/etc/redpanda/redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X help' for detail or '-X list' for terser detail.

|--ignore-profile |- |Ignore rpk.yaml and redpanda.yaml; use default settings.

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===